<resources>
    <string name="app_name">Weather</string>
    <string name="settings">Settings</string>
    <string name="theme">Theme</string>
    <string name="dark_theme_txt">Dark Theme</string>
    <string name="dark_theme_desc_txt">Join the Dark side</string>
    <string name="light_theme_txt">Light Theme</string>
    <string name="light_theme_desc_txt">Let There be Light</string>
    <string name="feedback_txt">Feedback</string>
    <string name="report_an_issue_txt">Report an Issue</string>
    <string name="report_an_issue_desc_txt">Facing an issue? Report and we\'ll look into it.</string>
    <string name="rate_on_play_store_txt">Rate on Play Store</string>
    <string name="rate_on_play_store_desc_txt">Enjoying the app? Leave a review on the Play Store</string>
    <string name="about_txt">About</string>
    <string name="about_weather_txt">About Weather</string>
    <string name="about_weather_desc_txt">Read a bit more about the app</string>
    <string name="the_team_txt">The Team</string>
    <string name="the_team_desc_txt">Get to know the team that made Weather a reality</string>
    <string name="select_city_txt">Select City</string>
    <string name="enum_andijan">Andijan Region</string>
    <string name="enum_bukhara">Bukhara Region</string>
    <string name="enum_jizzakh">Jizzakh Region</string>
    <string name="enum_urgench">Khorezm Region</string>
    <string name="enum_namangan">Namangan Region</string>
    <string name="enum_navoiy">Navoiy Region</string>
    <string name="enum_qashqadaryo">Qashqadaryo Region</string>
    <string name="enum_samarqand">Samarqand Region</string>
    <string name="enum_sirdaryo">Sirdaryo Region</string>
    <string name="enum_surkhandarya">Surkhandarya Region</string>
    <string name="enum_tashkent">Tashkent</string>
    <string name="enum_karakalpakstan">Karakalpakstan</string>
</resources>